[project]
name = "cauldrond"
description = "A simple, ligthweight and secure python scheduler for UNIX systems that does not depend on any third-party packages."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "solarvenom" }]
license = { text = "MIT" }
dynamic = ["version"]

[project.scripts]
cauldrond = "cauldrond.__main__:main"

[project.urls]
"Homepage" = "https://github.com/solarvenom/cauldrond"
"Issue Tracker" = "https://github.com/solarvenom/cauldrond/issues"

[tool.pyright]
pythonPlatform = "All"

[tool.setuptools_scm]