[project]
name = "kettled"
description = "A simple, ligthweight and secure python scheduler for UNIX systems that does not depend on any third-party packages."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "solarvenom", email = "contact@solarvenom.com"  }]
license = { text = "MIT" }
dynamic = ["version"]

[project.scripts]
kettled = "kettled.__main__:main"

[project.urls]
"Homepage" = "https://github.com/solarvenom/kettled"
"Issue Tracker" = "https://github.com/solarvenom/kettled/issues"

[tool.pyright]
pythonPlatform = "All"

[tool.setuptools_scm]