[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kettled"
description = "A simple, ligthweight and secure python scheduler for UNIX systems that does not depend on any third-party packages."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "solarvenom", email = "contact@solarvenom.com" }]
maintainers = [{ name = "solarvenom", email = "contact@solarvenom.com" }]
license = { text = "MIT" }
dynamic = ["version"]

keywords = [
    "scheduler",
    "schedule",
    "daemon",
    "datetime",
    "date",
    "time",
    "timedelta"
]

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
]

[project.urls]
"Homepage" = "https://github.com/solarvenom/kettled.py"
"Issue Tracker" = "https://github.com/solarvenom/kettled.py/issues"
"Changelog" = "https://github.com/solarvenom/kettled.py/CHANGELOG.md"

[tool.pyright]
pythonPlatform = "All"

[tool.setuptools.dynamic]
version = { attr = "kettled.__version__" }
readme = { file = "README.md", content-type = "text/markdown" }

[project.scripts]
kettled = "kettled.__main__:main"
